# platform-abstraction

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp  platform-base.h  platform-interface.h
source/platform-specific/apple/: platform-implementation.cpp  platform-implementation.h
source/platform-specific/linux/: platform-implementation.cpp  platform-implementation.h
source/platform-specific/windows/: platform-implementation.cpp  platform-implementation.h
